packages/uni-uts-v1/__tests__/__snapshots__/stacktrace.spec.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uts:stacktrace parseUTSKotlinStacktrace 1`] = `
"‌error: Unresolved reference: test‌
12 |          methods: {
13 |              onClick() {
14 |                  console.log(test)
   |                              ^
15 |              }
16 |          }
at components/test/test.vue:14:28"
`;

exports[`uts:stacktrace parseUTSKotlinStacktrace 2`] = `
"‌error: Unresolved reference: test‌
2  |      export default {
3  |          onLaunch: function() {
4  |              console.log('App Launch', test)
   |                                        ^
5  |          },
6  |          onShow: function() {
at App.vue:4:38"
`;
